// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RightMenu component recieves className 1`] = `
<div
  className="right_menu TEST_CLASS"
>
  TEST
</div>
`;

exports[`RightMenu component renders children 1`] = `
<div
  className="right_menu"
>
  TEST
</div>
`;
